--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ djangorestframework-simplejwt = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
 django-cors-headers = "*"
+gunicorn = "*"
+dj-database-url = "*"
+whitenoise = "*"
+python-decouple = "*"
 
 [dev-packages]
 
