--- a/todo_backend/.env
+++ b/todo_backend/.env
@@ -1,8 +1,9 @@
-DB_NAME=todo_db
+DB_NAME=railway 
 DB_USER=postgres
 DB_PASS=bzGvgmiGdSEIYmwnAFxFHHirgNtivXrJ
 DB_HOST=postgres.railway.internal
+DB_PORT=5432
 SECRET_KEY=ty2__l%l##%w!9ochg7spu&l3lcack)$icxz+o#1ovz2+7v05h
 DEBUG=False
 ALLOWED_HOSTS=localhost,.railway.app
-DATABASE_URL=postgresql://postgres:bzGvgmiGdSEIYmwnAFxFHHirgNtivXrJ@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:bzGvgmiGdSEIYmwnAFxFHHirgNtivXrJ@mainline.proxy.rlwy.net:40480/railway
